--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Домашня робота 6</title>
+    <title>Домашня робота 7</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/main.min.css"/>
@@ -17,7 +17,7 @@
             <nav class="nav">
                 <a href="#" class="nav__logo"><span class="logo-style">Web</span>Studio</a
           >
-          <ul class="site-nav list">
+          <ul class="site-nav__list">
             <li class="site-nav__item">
               <a href="#" class="site-nav__link site-nav__link--current">Студия</a>
                 </li>
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
 
-            <ul class="auth-nav list">
+            <ul class="auth-nav__list">
                 <li class="auth-nav__item">
                     <a href="mailto:info@devstudio.com" class="auth-nav__link">
                         <svg class="auth-nav__icon" width="16" height="12px"> 
@@ -119,7 +119,7 @@
         <section class="section">
             <div class="container">
                 <h2 class="section__title hidden">Преимущества</h2>
-                <ul class="features__list list">
+                <ul class="features__list">
                     <li class="features__item">
                         <div class="features__img">
                             <svg class="features__icon"> 
@@ -171,7 +171,7 @@
         <section class="section no-padding">
             <div class="container">
                 <h2 class="section__title">Чем мы занимаемся</h2>
-                <ul class="work__list list">
+                <ul class="work__list">
                     <li class="work__item">
                         <div class="work__image">
                             <img src="./images/img1.jpg" alt="Пример работы" width="370">
@@ -197,7 +197,7 @@
         <section class="section color">
             <div class="container">
               <h2 class="section__title">Наша команда</h2>
-              <ul class="team__list list">
+              <ul class="team__list">
                 <li class="team__item">
                   <img
                   class="team__img"
@@ -208,7 +208,7 @@
                   <div class="team__description">
                     <h3 class="team__title">Игорь Демьяненко</h3>
                     <p lang="en" class="team__text">Product Designer</p>
-                    <ul class="social-media__list list"> 
+                    <ul class="social-media__list"> 
                       <li class="social-media__item"> 
                         <a href="#" class="social-media__link">
                           <svg class="social-media__icon"> 
@@ -246,7 +246,7 @@
                   <div class="team__description">
                     <h3 class="team__title">Ольга Репина</h3>
                     <p lang="en" class="team__text">Frontend Developerr</p>
-                    <ul class="social-media__list list"> 
+                    <ul class="social-media__list"> 
                       <li class="social-media__item"> 
                         <a href="#" class="social-media__link">
                           <svg class="social-media__icon"> 
@@ -284,7 +284,7 @@
                   <div class="team__description">
                     <h3 class="team__title">Николай Тарасов</h3>
                     <p lang="en" class="team__text">Marketing</p>
-                    <ul class="social-media__list list"> 
+                    <ul class="social-media__list"> 
                       <li class="social-media__item"> 
                         <a href="#" class="social-media__link">
                           <svg class="social-media__icon"> 
@@ -322,7 +322,7 @@
                   <div class="team__description">
                     <h3 class="team__title">Михаил Ермаков</h3>
                     <p lang="en" class="team__text">UI Designer</p>
-                    <ul class="social-media__list list"> 
+                    <ul class="social-media__list"> 
                       <li class="social-media__item"> 
                         <a href="#" class="social-media__link">
                           <svg class="social-media__icon"> 
@@ -363,7 +363,7 @@
                 <h2 class="section__title">
                     Постоянные клиенты
                 </h2>
-                <ul class="clients__list list">
+                <ul class="clients__list">
                     <li class="clients__item">
                         <a href="#" class="clients__link">
                             <svg class="clients__icon">
@@ -419,7 +419,7 @@
         >
 
         <address>
-          <ul class="address__list list">
+          <ul class="address__list">
             <li><p class="address__text">г. Киев, пр-т Леси Украинки, 26</p></li>
             <li class="address__item">
               <a href="mailto:info@devstudio.com" class="address__link"
@@ -437,7 +437,7 @@
 
         <div class="network">
           <p class="footer__title">присоединяйтесь</p>
-          <ul class="network__list list"> 
+          <ul class="network__list"> 
             <li class="network__item">
               <a href="#" class="network__link">
                 <svg class="network__icon"> 
