--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Домашня робота 6</title>
+    <title>Домашня робота 7</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -17,12 +17,12 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <div class="container flex">
           <nav class="nav">
               <a href="#" class="nav__logo"><span class="logo-style">Web</span>Studio</a
         >
-        <ul class="site-nav list">
+        <ul class="site-nav__list">
           <li class="site-nav__item">
             <a href="index.html" class="site-nav__link">Студия</a>
               </li>
@@ -35,7 +35,7 @@
               </ul>
           </nav>
 
-          <ul class="auth-nav list">
+          <ul class="auth-nav__list">
               <li class="auth-nav__item">
                   <a href="mailto:info@devstudio.com" class="auth-nav__link">
                       <svg class="auth-nav__icon" width="16" height="12px"> 
@@ -59,7 +59,7 @@
         <div class="container">
           <h1 class="section__title hidden">Портфолио</h1>
 
-          <ul class="filter-nav__list list">
+          <ul class="filter-nav__list">
             <li class="filter-nav__item">
               <button type="button" class="button button--secondary">Все</button>
             </li>
@@ -77,7 +77,7 @@
             </li>
           </ul>
 
-          <ul class="cardset__list list">
+          <ul class="cardset__list">
             <li class="cardset__item">
               <a href="#" class=cardset__link>
                 <div class="cardset__overlay">
@@ -276,7 +276,7 @@
       >
 
       <address>
-        <ul class="address__list list">
+        <ul class="address__list">
           <li><p class="address__text">г. Киев, пр-т Леси Украинки, 26</p></li>
           <li class="address__item">
             <a href="mailto:info@devstudio.com" class="address__link"
@@ -294,7 +294,7 @@
 
       <div class="network">
         <p class="footer__title">присоединяйтесь</p>
-        <ul class="network__list list"> 
+        <ul class="network__list"> 
           <li class="network__item">
             <a href="#" class="network__link">
               <svg class="network__icon"> 
