--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="nav">
                 <a href="#" class="nav__logo"><span class="logo-style">Web</span>Studio</a
           >
-          <ul class="site-nav__list">
+          <ul class="site-nav">
             <li class="site-nav__item">
               <a href="#" class="site-nav__link site-nav__link--current">Студия</a>
                 </li>
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
 
-            <ul class="auth-nav__list">
+            <ul class="auth-nav">
                 <li class="auth-nav__item">
                     <a href="mailto:info@devstudio.com" class="auth-nav__link">
                         <svg class="auth-nav__icon" width="16" height="12px"> 
@@ -96,7 +96,7 @@
                       </svg>
                   </div>
 
-                  <div class="modal-form-field no-margin">
+                  <div class="modal-form-field">
                     <label class="modal-form-field__label" for="comment">Комментарий</label>
                     <textarea class="modal-form-field__textarea" name="comment" id="comment" cols="30" rows="10" placeholder="Введите текст"></textarea>
                   </div>
@@ -119,7 +119,7 @@
         <section class="section">
             <div class="container">
                 <h2 class="section__title hidden">Преимущества</h2>
-                <ul class="features__list">
+                <ul class="features">
                     <li class="features__item">
                         <div class="features__img">
                             <svg class="features__icon"> 
@@ -168,10 +168,10 @@
             </div>
         </section>
 
-        <section class="section no-padding">
+        <section class="section--no-padding">
             <div class="container">
                 <h2 class="section__title">Чем мы занимаемся</h2>
-                <ul class="work__list">
+                <ul class="work">
                     <li class="work__item">
                         <div class="work__image">
                             <img src="./images/img1.jpg" alt="Пример работы" width="370">
@@ -194,10 +194,10 @@
             </div>
         </section>
 
-        <section class="section color">
+        <section class="section--color">
             <div class="container">
               <h2 class="section__title">Наша команда</h2>
-              <ul class="team__list">
+              <ul class="team">
                 <li class="team__item">
                   <img
                   class="team__img"
@@ -208,7 +208,7 @@
                   <div class="team__description">
                     <h3 class="team__title">Игорь Демьяненко</h3>
                     <p lang="en" class="team__text">Product Designer</p>
-                    <ul class="social-media__list"> 
+                    <ul class="social-media"> 
                       <li class="social-media__item"> 
                         <a href="#" class="social-media__link">
                           <svg class="social-media__icon"> 
@@ -246,7 +246,7 @@
                   <div class="team__description">
                     <h3 class="team__title">Ольга Репина</h3>
                     <p lang="en" class="team__text">Frontend Developerr</p>
-                    <ul class="social-media__list"> 
+                    <ul class="social-media"> 
                       <li class="social-media__item"> 
                         <a href="#" class="social-media__link">
                           <svg class="social-media__icon"> 
@@ -284,7 +284,7 @@
                   <div class="team__description">
                     <h3 class="team__title">Николай Тарасов</h3>
                     <p lang="en" class="team__text">Marketing</p>
-                    <ul class="social-media__list"> 
+                    <ul class="social-media"> 
                       <li class="social-media__item"> 
                         <a href="#" class="social-media__link">
                           <svg class="social-media__icon"> 
@@ -322,7 +322,7 @@
                   <div class="team__description">
                     <h3 class="team__title">Михаил Ермаков</h3>
                     <p lang="en" class="team__text">UI Designer</p>
-                    <ul class="social-media__list"> 
+                    <ul class="social-media"> 
                       <li class="social-media__item"> 
                         <a href="#" class="social-media__link">
                           <svg class="social-media__icon"> 
@@ -363,7 +363,7 @@
                 <h2 class="section__title">
                     Постоянные клиенты
                 </h2>
-                <ul class="clients__list">
+                <ul class="clients">
                     <li class="clients__item">
                         <a href="#" class="clients__link">
                             <svg class="clients__icon">
@@ -419,7 +419,7 @@
         >
 
         <address>
-          <ul class="address__list">
+          <ul class="address">
             <li><p class="address__text">г. Киев, пр-т Леси Украинки, 26</p></li>
             <li class="address__item">
               <a href="mailto:info@devstudio.com" class="address__link"
