--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
           <nav class="nav">
               <a href="#" class="nav__logo"><span class="logo-style">Web</span>Studio</a
         >
-        <ul class="site-nav__list">
+        <ul class="site-nav">
           <li class="site-nav__item">
             <a href="index.html" class="site-nav__link">Студия</a>
               </li>
@@ -35,7 +35,7 @@
               </ul>
           </nav>
 
-          <ul class="auth-nav__list">
+          <ul class="auth-nav">
               <li class="auth-nav__item">
                   <a href="mailto:info@devstudio.com" class="auth-nav__link">
                       <svg class="auth-nav__icon" width="16" height="12px"> 
@@ -59,7 +59,7 @@
         <div class="container">
           <h1 class="section__title hidden">Портфолио</h1>
 
-          <ul class="filter-nav__list">
+          <ul class="filter-nav">
             <li class="filter-nav__item">
               <button type="button" class="button button--secondary">Все</button>
             </li>
@@ -77,7 +77,7 @@
             </li>
           </ul>
 
-          <ul class="cardset__list">
+          <ul class="cardset">
             <li class="cardset__item">
               <a href="#" class=cardset__link>
                 <div class="cardset__overlay">
@@ -276,7 +276,7 @@
       >
 
       <address>
-        <ul class="address__list">
+        <ul class="address">
           <li><p class="address__text">г. Киев, пр-т Леси Украинки, 26</p></li>
           <li class="address__item">
             <a href="mailto:info@devstudio.com" class="address__link"
